--- a/template/css/miestilo.css
+++ b/template/css/miestilo.css
@@ -1,7 +1,1 @@
-.about-parrafo{color: #dc143c;}
-
-.about-parrafo{color: rgb(184, 11, 11);}
-
-.description{color: darkgoldenrod;}
-
-.icon-box{color: black;}
+.description{color: red;}
