--- a/template/css/miestilo.css
+++ b/template/css/miestilo.css
@@ -1,3 +1,8 @@
 .description{color: red;}
 
-.about-text{color: seagreen;}
+.about-parrafo{color: seagreen;}
+
+#team{background-color: skyblue;}
+
+
+
