--- a/template/index.html
+++ b/template/index.html
@@ -556,7 +556,7 @@
       <div class="container">
         <div class="section-header">
           <h3>Equipo</h3>
-          <p>kContamos con un equipo de expertos altamente capacitados y dedicados en brindarte el mejor asesoramiento financiero.</p>
+          <p>Contamos con un equipo de expertos altamente capacitados y dedicados en brindarte el mejor asesoramiento financiero.</p>
         </div>
 
         <div class="row">
