--- a/template/index.html
+++ b/template/index.html
@@ -7,6 +7,13 @@
   <meta content="" name="keywords">
   <meta content="" name="description">
 
+  <script src="js/miapp.js"></script>
+  
+
+ 
+ 
+  
+
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -564,18 +571,7 @@
           <div class="col-lg-3 col-md-6 wow fadeInUp">
             <div class="member">
               <img src="img/testimonial-1.jpg" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Walter White</h4>
-                  <span>Chief Executive Officer</span>
-                  <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-google-plus"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
-                  </div>
-                </div>
-              </div>
+             
             </div>
           </div>
 
@@ -632,6 +628,20 @@
               </div>
             </div>
           </div>
+          <div class="member-info">
+            <div class="member-info-content">
+              <h4>Walter White</h4>
+              <span>Chief Executive Officer</span>
+              <div class="social">
+                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-facebook"></i></a>
+                <a href=""><i class="fa fa-google-plus"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+          
+      
 
         </div>
 
@@ -713,7 +723,7 @@
       <div class="container-fluid">
 
         <div class="section-header">
-          <h3>Contact Us</h3>
+          <h3>Contacto</h3>
         </div>
 
         <div class="row wow fadeInUp">
@@ -742,7 +752,7 @@
 
             <div class="form">
               <div id="sendmessage">Your message has been sent. Thank you!</div>
-              <div id="errormessage"></div>
+              <div id="errormessage">error message</div>
               <form action="" method="post" role="form" class="contactForm">
                 <div class="form-row">
                   <div class="form-group col-lg-6">
@@ -759,10 +769,10 @@
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message" id="message"></textarea>
                   <div class="validation"></div>
                 </div>
-                <div class="text-center"><button type="submit" title="Send Message">Send Message</button></div>
+                <div class="text-center"><button onclick="enviarMsj()" type="submit" title="Send Message" id="sendmsj">Send Message</button></div>
               </form>
             </div>
           </div>
@@ -864,6 +874,7 @@
   <script src="lib/lightbox/js/lightbox.min.js"></script>
   <!-- Contact Form JavaScript File -->
   <script src="contactform/contactform.js"></script>
+  
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
